in-project solution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.6)
+#cmake_minimum_required(VERSION 2.6)
 
-project(dear_imgui)
+#project(dear_imgui)
 
 add_library(imgui
   imgui.cpp
@@ -10,12 +10,4 @@ add_library(imgui
 
 add_subdirectory(examples/opengl3_example)
 
-install(TARGETS imgui
-  ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION lib
-)
-
-install(
-  FILES imgui.h
-  DESTINATION include
-)
+set(IMGUI_PATH ${CMAKE_CURRENT_LIST_DIR})
